--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ node_modules/
 static/index.seo.html
 faucet-config.json
 faucet-config.yaml
+faucet-config.goerli.yaml
 faucet-status.json
 faucet-store.*
 faucet-stats.log
